# kubernetes-docs-rag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  main.py  models.py
app/services/: chunker.py  demo_mode.py  retrieval.py
app/static/: app.js  index.html  styles.css
data/sample/: eval_queries.jsonl  sample_chunks.jsonl
docker/: docker-compose.yml
scripts/: evaluate_retrieval.py  index_docs.py  index_sample_docs.py  scrape_docs.py
tests/: test_chunker.py  test_indexing.py  test_retrieval.py
